--- a/style/media.scss
+++ b/style/media.scss
@@ -107,6 +107,7 @@
         gap: 20px;
     }
     .project {
+        padding: 30px;
         .wr-form {
             display: flex;
             flex-direction: column;
@@ -176,6 +177,9 @@
 }
 
 @media screen and (max-width: 550px) {
+    .number-st {
+        padding: 10px;
+    }
     .card-basic {
         top: 200px;
     }
@@ -188,6 +192,7 @@
         }
     }
     .menu-header {
+        padding: 0;
         gap: 20px;
     }
     .all-serv {
@@ -212,6 +217,7 @@
         font-size: 1.2rem;
     }
     .inf {
+        padding: 30px;
         width: 100%;
     }
 }
