--- a/style/media.scss
+++ b/style/media.scss
@@ -16,7 +16,11 @@
             display: none;
         }
     }
-
+    .reviews {
+        img {
+            display: none;
+        }
+    }
     
     .home-left__title {
         font-size: 4rem;
@@ -26,12 +30,12 @@
         font-size: 1rem;
     }
 
-    .home {
-        .home-right {
-            .arrow, .screw, .screw-2 {
-                display: none;
-            }
-        }
+    .home-right {
+       display: none;
+    }
+
+    .home-left .btn-wr {
+        margin-bottom: 100px;
     }
 
     .basic {
@@ -94,9 +98,19 @@
             width: 50%;
         }
     }
+    .card-inf {
+        max-width: 100%;
+    }
 }
 
 @media screen and (max-width: 850px) {
+    .stages-title {
+        display: flex;
+        flex-direction: column;
+    }
+    .inf {
+        padding: 20px;
+    }
     h2 {
         font-size: 3rem;
     }
