--- a/style/style.scss
+++ b/style/style.scss
@@ -29,7 +29,6 @@ a, button {
     cursor: pointer;
 }
 
-
 :root {
     --color-number: linear-gradient(117.4deg, #181919 40.27%, #205ADD 105%);
     --color-bt: linear-gradient(272.85deg, #181919 -6.44%, #205ADD 111.44%);
@@ -47,6 +46,7 @@ body {
     font-family: 'cygre';
     background: var(--bg-basic);
     color: var(--text-color);
+    position: relative;
 }
 
 h2 {
@@ -91,8 +91,9 @@ section {
     flex-direction: row;
     gap: 160px;
     justify-content: space-between;
-    padding: 10px;
+    padding: 7px;
     .nav-menu {
+        padding-top: 10px;
         display: flex;
         flex-direction: row;
         gap: 20px;
@@ -108,6 +109,7 @@ section {
     flex-direction: row;
     gap: 13px;
     &__number {
+        padding-top: 7px;
         a {
             color: var(--text-color);
             font-size: 0.87rem;
@@ -134,38 +136,55 @@ section {
 .home {
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
 .home-left {
-    position: relative;
     &__title {
         font-size: 4rem;
         font-weight: 500;
         margin-bottom: 60px;
         line-height: 76px;
+        max-width: 970px;
+        width: 100%;
         span {
             font-family: 'cygre medium';
         }
     }
     &__par {
+        max-width: 800px;
+        width: 100%;
         margin-bottom: 80px;
         font-size: 1.5rem;
+    }
+    .btn-wr {
+        margin-bottom: 200px;
     }
 }
 
 .home-right {
-    position: relative;
+    .logo {
+        position: absolute;
+        top: 120px;
+        right: 0;
+    }
     .arrow {
         position: absolute;
-        bottom: 200px;
-        left: -40px;
+        top: 580px;
+        right: 370px;
+    }
+    .screw-2 {
+        position: absolute;
+        top: 650px;
+        right: 30px;
     }
     .screw {
         position: absolute;
-        bottom: 120px;
-        right: 30px;
+        top: 100px;
+        right: 300px;
     }
 }
+
 
 .btn {
     font-family: 'cygre';
@@ -260,6 +279,10 @@ section {
     }
 }
 
+.licenses {
+    margin-top: 100px;
+}
+
 .all-card {
 display: flex;
 flex-direction: row;
@@ -323,6 +346,7 @@ padding: 40px 35px;
 }
 
 .card-st {
+    height: 500px;
     width: 100%;
     max-width: 493px;
     display: flex;
@@ -330,6 +354,7 @@ padding: 40px 35px;
     flex-direction: column;
     color: var(--color-wh);
     .card-top {
+        height: 200px;
         &__title {
             font-family: 'cygre semibold';
             margin-bottom: 22px;
@@ -341,6 +366,7 @@ padding: 40px 35px;
         }
     }
     .card-bot {
+        height: 100px;
         font-size: 1.25rem;
         max-width: 334px;
         width: 100%;
@@ -364,15 +390,23 @@ padding: 40px 35px;
     border-radius: 20px;
     padding: 80px;
     margin-bottom: 100px;
-    color: var(--color-wh);
     h2 {
         width: 100%;
         max-width: 800px;
+        color: var(--bg-dark) !important;
     }
-    &__pr {
-        max-width: 761px;
-        width: 100%;
+    .wr-par {
+        margin-right: 50px;
+        border-radius: 20px;
+        padding: 10px;
+        background-color: var(--bg-dark);
         margin-bottom: 60px;
+        transform: translateX(250px);
+        &__inf {
+            color: var(--color-wh);
+            max-width: 761px;
+            width: 100%;
+        }
     }
 }
 
@@ -487,6 +521,7 @@ input {
 }
 
 .card-basic {
+    position: relative;
     padding: 20px;
     background: rgba(255, 255, 255, 0.8);
     border-radius: 20px;
@@ -496,8 +531,13 @@ input {
     display: flex;
     flex-direction: row;
     max-width: 810px;
-    width: 100%;
+    width: 100%; 
+}
 
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
 }
 
 .card-rev {
@@ -543,6 +583,7 @@ input {
 }
 
 .card-inf {
+    height: 130px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -623,7 +664,7 @@ input {
 }
 
 .faq__text {
-    display: block;
+    display: none;
     font-size: 1.25rem;
 }
 
