--- a/style/media.scss
+++ b/style/media.scss
@@ -18,7 +18,7 @@
     }
     .reviews {
         img {
-            display: none;
+            width: 90%;
         }
     }
     
@@ -127,6 +127,14 @@
             flex-direction: column;
         }
     }
+    .reviews {
+        img {
+            display: none;
+        }
+    }
+    .card-basic {
+        position: relative;
+    }
 }
 
 @media screen and (max-width: 772px) {
@@ -188,14 +196,14 @@
     .btn {
         padding: 7px;
     }
+    .card-disc {
+        font-size: 1.2rem;
+    }
 }
 
 @media screen and (max-width: 550px) {
     .number-st {
         padding: 10px;
-    }
-    .card-basic {
-        top: 200px;
     }
     .home-left__title {
         font-size: 3.5rem;
@@ -223,6 +231,11 @@
     }
     .card-text__name {
         font-size: 1.2rem;
+    }
+    .all-card-lic {
+        img {
+            width: 70%;
+        }
     }
 }
 
