--- a/style/style.scss
+++ b/style/style.scss
@@ -25,7 +25,11 @@ a.active, a {
     outline: none;
 }
 
-a, button {
+li {
+    list-style-type:  none;
+}
+
+a, button, .close {
     cursor: pointer;
 }
 
@@ -92,14 +96,51 @@ section {
     gap: 160px;
     justify-content: space-between;
     padding: 7px;
-    .nav-menu {
-        padding-top: 10px;
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
+    .logo-name {
+        padding-top: 5px;
+    }
+}
+
+.list-menu {
+    padding-top: 7px;
+    display: flex;
+    flex-direction: row;
+    gap: 30px; 
+    a {
+        font-size: 0.87rem;
+        color: var(--text-color);
+    }
+}
+
+.op-menu {
+    position: relative;
+    ul {
+        li {
+            padding: 10px 7px; 
+        }
+    }
+}  
+
+.op-menu:hover {
+    .op-menu-list {
+        display: block;
+    }
+}
+
+.op-menu-list {
+    position: absolute;
+    flex-direction: column;
+    gap: 0px;
+    background-color: rgb(255 255 255 / 87%);
+    backdrop-filter: blur(200.8px);
+    z-index: 5;
+    border-radius: 8px;
+    left: 0;
+    display: none; 
+    li {
         a {
             font-size: 0.87rem;
-            color: var(--text-color)
+            color: var(--text-color);
         }
     }
 }
@@ -109,6 +150,7 @@ section {
     flex-direction: row;
     gap: 13px;
     &__number {
+        font-family: 'cygre semibold';
         padding-top: 7px;
         a {
             color: var(--text-color);
@@ -378,6 +420,10 @@ padding: 40px 35px;
 
 .form-crm {
     .wr-form-crm {
+        width: 100%;
+        background: linear-gradient(301.05deg, #010764 5.87%, #144EC1 91.47%),
+    radial-gradient(92.24% 220.3% at 84.54% 88.24%, #047DF6 0%, rgba(1, 173, 255, 0) 47.5%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    border-radius: 20px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -385,28 +431,20 @@ padding: 40px 35px;
 }
 
 .inf {
-    z-index: 1;
-    background: rgba(255, 255, 255, 0.3);
     border-radius: 20px;
     padding: 80px;
     margin-bottom: 100px;
     h2 {
         width: 100%;
         max-width: 800px;
-        color: var(--bg-dark) !important;
     }
     .wr-par {
-        margin-right: 50px;
+        color: var(--color-wh);
         border-radius: 20px;
         padding: 10px;
-        background-color: var(--bg-dark);
         margin-bottom: 60px;
-        transform: translateX(250px);
-        &__inf {
-            color: var(--color-wh);
-            max-width: 761px;
-            width: 100%;
-        }
+        width: 100%;
+        max-width: 760px;
     }
 }
 
@@ -430,12 +468,9 @@ input {
     position: relative;
     img {
         position: absolute;
-        width: 700px;
-        height: 530px;
         top: 70px;
-        right: -30px;
-        border-radius: 20px;
-    }
+        right: 80px;
+   }
 }
 
 .adv-text {
@@ -574,10 +609,13 @@ input {
 .blog {
     padding: 20px;
     .card-image {
-        width: 100%;
-        height: 410px;
-        border-radius: 20px;
-        margin-bottom: 20px;
+        img {
+            width: 100%;
+            background-size: cover;
+            height: 100%;
+            border-radius: 20px;
+            margin-bottom: 20px;
+        }
     }
 
 }
@@ -599,6 +637,7 @@ input {
         flex-direction: row;
         justify-content: space-between;
         &__data {
+            padding-top: 5px;
             color: rgba(0, 0, 0, 0.5);
         }
 
@@ -894,11 +933,11 @@ footer {
     color:#000;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     gap: 20px;
     padding: 20px;
     .card__picture {
         width: 220px;
+        height: 200px;
     }
     .card__text {
         display: none;
