--- a/style/style.css
+++ b/style/style.css
@@ -400,13 +400,34 @@ section {
   margin-bottom: 10px;
 }
 
-.form-crm .wr-form-crm {
+.wr-bg {
+  position: relative;
+}
+.wr-bg__top {
+  position: absolute;
+  top: -240px;
+  z-index: 0;
+}
+.wr-bg__bt {
+  position: absolute;
+  bottom: -270px;
+  z-index: 0;
+}
+
+.form-crm {
+  position: relative;
+  z-index: 999;
+  margin-top: 300px;
+  margin-bottom: 270px;
   width: 100%;
-  background: linear-gradient(301.05deg, #010764 5.87%, #144EC1 91.47%), radial-gradient(92.24% 220.3% at 84.54% 88.24%, #047DF6 0%, rgba(1, 173, 255, 0) 47.5%);
   border-radius: 20px;
+  background: linear-gradient(301.05deg, #010764 5.87%, #144EC1 91.47%), radial-gradient(92.24% 220.3% at 84.54% 88.24%, #047DF6 0%, rgba(1, 173, 255, 0) 47.5%);
+}
+.form-crm .wr-form-crm {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 200px;
 }
 
 .inf {
@@ -444,10 +465,20 @@ input {
 .foto {
   position: relative;
 }
-.foto img {
+.foto .mac {
   position: absolute;
   top: 70px;
   right: 80px;
+}
+.foto .arrow-form {
+  position: absolute;
+  bottom: 90px;
+  right: 300px;
+}
+.foto .zoom {
+  position: absolute;
+  top: 40px;
+  right: 50px;
 }
 
 .adv-text {
@@ -804,6 +835,85 @@ footer p {
   color: #000;
 }
 
+.home-ser {
+  color: var(--color-wh);
+  display: flex;
+  flex-direction: row;
+}
+.home-ser .home-ser-title {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+.home-ser .home-ser-title__pr {
+  max-width: 640px;
+  width: 100%;
+}
+
+.profit {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+.profit .profit-img {
+  grid-column: span 2;
+}
+.profit .profit-form {
+  display: flex;
+  flex-direction: column;
+  grid-column: span 4;
+  gap: 25px;
+}
+.profit .profit-form .wr-btn {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.top-title {
+  margin-top: 80px;
+  margin-bottom: 0;
+}
+
+.home-picture {
+  z-index: -2;
+  width: 600px;
+  position: relative;
+}
+.home-picture__img {
+  position: absolute;
+  top: 30px;
+  right: 100px;
+  z-index: -1;
+}
+
+.picture-card {
+  position: absolute;
+  bottom: 130px;
+  left: -170px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  width: 100%;
+  max-width: 310px;
+  padding: 20px;
+  background: var(--color-wh);
+  border-radius: 20px;
+  color: var(--text-color);
+}
+.picture-card img {
+  width: 60px;
+  height: 60px;
+}
+.picture-card__text {
+  font-size: 0.87rem;
+}
+
+.home-btn {
+  position: absolute;
+  top: 250px;
+  left: -200px;
+}
+
 .necessity {
   display: flex;
   flex-direction: column;
@@ -815,6 +925,7 @@ footer p {
 }
 
 .up-title {
+  text-transform: uppercase;
   color: var(--color-wh);
 }
 .up-title span {
