--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,6 @@ h2 {
   text-align: left;
   font-weight: 500;
   margin-bottom: 60px;
-  line-height: 76.8px;
 }
 
 h3 {
@@ -355,7 +354,8 @@ section {
 }
 .stages-title__arrow {
   position: absolute;
-  right: 30px;
+  right: 20px;
+  top: -500px;
 }
 
 .swiper-button-next {
@@ -839,6 +839,7 @@ footer p {
   color: var(--color-wh);
   display: flex;
   flex-direction: row;
+  margin-bottom: 150px;
 }
 .home-ser .home-ser-title {
   display: flex;
@@ -869,9 +870,22 @@ footer p {
   gap: 20px;
 }
 
+.wr-btn__par {
+  font-size: 0.8rem;
+  font-family: "cygre mediun";
+}
+.wr-btn__par span {
+  font-size: 2rem;
+}
+
+.wr-btn__foto img:not(:last-child) {
+  margin-right: -15px;
+}
+
 .top-title {
   margin-top: 80px;
   margin-bottom: 0;
+  width: 900px;
 }
 
 .home-picture {
