--- a/style/media.css
+++ b/style/media.css
@@ -1,18 +1,24 @@
+@media screen and (max-width: 1200px) {
+  .menu-header {
+    width: 100%;
+  }
+  .menu-header .nav-menu {
+    display: none;
+  }
+  .picture-card {
+    display: none;
+  }
+}
 @media screen and (max-width: 1100px) {
   h2 {
     font-size: 3.5rem;
+    margin-bottom: 0;
   }
   h3 {
     font-size: 2.2rem;
   }
   .container {
     margin: 0 auto;
-  }
-  .menu-header {
-    width: 100%;
-  }
-  .menu-header .nav-menu {
-    display: none;
   }
   .reviews img {
     width: 90%;
@@ -78,7 +84,7 @@
     gap: 20px;
   }
   .card-basic {
-    top: 100px;
+    top: 0;
     left: 0;
   }
   .card-basic img {
@@ -86,6 +92,18 @@
   }
   .card-inf {
     max-width: 100%;
+  }
+  .wr-bg__top img, .wr-bg__bt img {
+    display: none;
+  }
+  .foto {
+    display: none;
+  }
+  .home-btn {
+    display: none;
+  }
+  .stages-title__arrow {
+    display: none !important;
   }
 }
 @media screen and (max-width: 850px) {
@@ -116,6 +134,17 @@
     display: none;
   }
   .card-basic {
+    position: relative;
+  }
+  .top-title {
+    font-size: 2.5rem;
+    width: 700px;
+    margin-top: 0;
+  }
+  .home-picture__img {
+    display: none;
+  }
+  .home-btn {
     position: relative;
   }
 }
@@ -173,13 +202,23 @@
   .card-disc {
     font-size: 1.2rem;
   }
+  .up-title {
+    font-size: 2rem;
+  }
 }
 @media screen and (max-width: 550px) {
+  section {
+    margin-bottom: 50px;
+  }
   .number-st {
     padding: 10px;
   }
   .home-left__title {
     font-size: 3.5rem;
+  }
+  .top-title {
+    font-size: 2rem;
+    width: 400px;
   }
   .home-right img {
     display: none;
@@ -203,6 +242,23 @@
   }
   .all-card-lic img {
     width: 70%;
+  }
+  .home-ser {
+    margin-bottom: 50px;
+  }
+  .home-ser .home-ser-title__pr {
+    max-width: 450px;
+  }
+  .profit {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .up-title {
+    font-size: 2rem;
+  }
+  .button-tel__number a {
+    font-size: 0.7rem;
   }
 }
 @media screen and (max-width: 450px) {
