--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ a.active, a {
 }
 
 li {
-  list-style-type: none;
+  list-style: none;
 }
 
 a, button, .close {
@@ -113,7 +113,7 @@ section {
   position: relative;
 }
 .op-menu ul li {
-  padding: 10px 7px;
+  padding: 10px 3px;
 }
 
 .op-menu:hover .op-menu-list {
@@ -293,7 +293,7 @@ section {
 }
 
 .link-serv:hover {
-  background: linear-gradient(180deg, rgb(24, 25, 25) 33.64%, #205add);
+  background: linear-gradient(180deg, rgb(249, 250, 250) 33.64%, #205add);
   transition: transform 0.5s ease-in-out;
   transform: scale(1.05);
 }
@@ -538,6 +538,8 @@ input {
 .cases-card__btn {
   border: 1px solid rgb(255, 255, 255);
   border-radius: 20px;
+  height: 50px;
+  margin-top: 30px;
 }
 .cases-card__btn button {
   background: none;
@@ -548,15 +550,26 @@ input {
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  max-width: 700px;
+  max-width: 750px;
 }
 .wr-cases__result {
-  background: var(--color-wh);
-  padding: 7px;
-  border-radius: 20px;
+  color: var(--color-wh);
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
 }
-.wr-cases__result p {
-  color: var(--text-color);
+.wr-cases h3 {
+  padding-top: 30px;
+}
+
+.result-cas {
+  width: 100%;
+}
+.result-cas span {
+  font-family: "cygre";
+  font-weight: 800;
+  text-align: center;
+  font-size: 4rem;
 }
 
 .reviews {
